tests/lean/typeIncorrectPat.lean.expected.out
typeIncorrectPat.lean:2:3-2:12: error: Type mismatch in pattern: Pattern
  true
has type
  Bool
but is expected to have type
  fstâœ
